[fix] biwakoswordの日本語名を変更
琵琶湖県から滋賀県へ変更。こっちのほうが好き。

--- a/src/main/resources/assets/biwako_mod/lang/en_us.lang
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.lang
@@ -1,3 +1,4 @@
 # English Language File
 item.biwakoburger.name=Biwako Burger
 item.biwakowater.name=Water of Biwako
+item.biwakosword.name=Biwako Sword
