[add] 琵琶湖ブロックを追加した

--- a/src/main/resources/assets/biwako_mod/lang/en_us.lang
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.lang
@@ -2,3 +2,4 @@
 item.biwakoburger.name=Biwako Burger
 item.biwakowater.name=Water of Biwako
 item.biwakosword.name=Biwako Sword
+tile.biwakoblock.name=Biwako Block
