--- a/src/main/resources/assets/biwako_mod/lang/ja_jp.lang
+++ b/src/main/resources/assets/biwako_mod/lang/ja_jp.lang
@@ -1,4 +1,5 @@
 # 日本語言語ファイル
 item.biwakoburger.name=琵琶湖バーガー
 item.biwakowater.name=琵琶湖の水
-item.biwakosword.name=滋賀県
+item.biwakosword.name=滋賀剣
+tile.biwakoblock.name=琵琶湖ブロック
