[add] ブロックの追加。
琵琶湖ブロックを追加した。

--- a/src/main/resources/assets/biwako_mod/lang/en_us.json
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "item.biwako_mod.biwako_ingot":  "Biwako Ingot"
+    "item.biwako_mod.biwako_ingot":  "Biwako Ingot",
+    "block.biwako_mod.biwako_block": "Biwako Block"
 }
