--- a/src/main/resources/assets/biwako_mod/lang/ja_jp.json
+++ b/src/main/resources/assets/biwako_mod/lang/ja_jp.json
@@ -1,3 +1,4 @@
 {
-    "item.biwako_mod.biwako_ingot": "琵ンゴット"
+    "item.biwako_mod.biwako_ingot": "琵ンゴット",
+    "block.biwako_mod.biwako_block": "琵ロック"
 }
