--- a/src/main/resources/assets/biwako_mod/lang/en_us.json
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "item.biwako_mod.biwako_ingot":  "Biwako Ingot",
-    "block.biwako_mod.biwako_block": "Biwako Block"
+    "block.biwako_mod.biwako_block": "Biwako Block",
+    "itemGroup.BiwakoItemGroup": "Biwako MOD"
 }
