--- a/src/main/resources/assets/biwako_mod/lang/en_us.json
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.json
@@ -1,5 +1,10 @@
 {
-    "item.biwako_mod.biwako_ingot":  "Biwako Ingot",
+    "item.biwako_mod.biwako_ingot": "Biwako Ingot",
     "block.biwako_mod.biwako_block": "Biwako Block",
-    "itemGroup.BiwakoItemGroup": "Biwako MOD"
+    "itemGroup.BiwakoItemGroup": "Biwako MOD",
+    "item.biwako_mod.biwako_axe": "Biwako Axe",
+    "item.biwako_mod.biwako_hoe": "Biwako Hoe",
+    "item.biwako_mod.biwako_pickaxe": "Biwako Pickaxe",
+    "item.biwako_mod.biwako_shovel": "Biwako Shovel",
+    "item.biwako_mod.biwako_sword": "Biwako Sword"
 }
