[add] アーマーの追加

--- a/src/main/resources/assets/biwako_mod/lang/en_us.json
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.json
@@ -6,5 +6,9 @@
     "item.biwako_mod.biwako_hoe": "Biwako Hoe",
     "item.biwako_mod.biwako_pickaxe": "Biwako Pickaxe",
     "item.biwako_mod.biwako_shovel": "Biwako Shovel",
-    "item.biwako_mod.biwako_sword": "Biwako Sword"
+    "item.biwako_mod.biwako_sword": "Biwako Sword",
+    "item.biwako_mod.biwako_helmet": "Biwako Helmet",
+    "item.biwako_mod.biwako_chestplate": "Biwako Chestplate",
+    "item.biwako_mod.biwako_leggings": "Biwako Leggings",
+    "item.biwako_mod.biwako_boots": "Biwako Boots"
 }
