--- a/src/main/resources/assets/biwako_mod/lang/ja_jp.json
+++ b/src/main/resources/assets/biwako_mod/lang/ja_jp.json
@@ -6,5 +6,9 @@
     "item.biwako_mod.biwako_hoe": "琵琶湖のクワ",
     "item.biwako_mod.biwako_pickaxe": "琵琶湖のピッケル",
     "item.biwako_mod.biwako_shovel": "琵琶湖のスコップ",
-    "item.biwako_mod.biwako_sword": "琵琶湖の剣"
+    "item.biwako_mod.biwako_sword": "琵琶湖の剣",
+    "item.biwako_mod.biwako_helmet": "琵琶湖のヘルメット",
+    "item.biwako_mod.biwako_chestplate": "琵琶湖のチェストプレート",
+    "item.biwako_mod.biwako_leggings": "琵琶湖のレギンス",
+    "item.biwako_mod.biwako_boots": "琵琶湖のブーツ"
 }
