[add] 琵琶鉱石の追加

--- a/src/main/resources/assets/biwako_mod/lang/en_us.json
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
     "item.biwako_mod.biwako_ingot": "Biwako Ingot",
     "block.biwako_mod.biwako_block": "Biwako Block",
+    "block.biwako_mod.biwako_ore": "Biwako Ore",
     "itemGroup.BiwakoItemGroup": "Biwako MOD",
     "item.biwako_mod.biwako_axe": "Biwako Axe",
     "item.biwako_mod.biwako_hoe": "Biwako Hoe",
