[add] 琵琶湖ォーツの追加

--- a/src/main/resources/assets/biwako_mod/lang/en_us.json
+++ b/src/main/resources/assets/biwako_mod/lang/en_us.json
@@ -2,6 +2,7 @@
     "item.biwako_mod.biwako_ingot": "Biwako Ingot",
     "block.biwako_mod.biwako_block": "Biwako Block",
     "block.biwako_mod.biwako_ore": "Biwako Ore",
+    "block.biwako_mod.biwako_quartz_ore": "Biwako Quartz",
     "itemGroup.BiwakoItemGroup": "Biwako MOD",
     "item.biwako_mod.biwako_axe": "Biwako Axe",
     "item.biwako_mod.biwako_hoe": "Biwako Hoe",
