--- a/src/main/resources/assets/biwako_mod/lang/ja_jp.json
+++ b/src/main/resources/assets/biwako_mod/lang/ja_jp.json
@@ -2,6 +2,7 @@
     "item.biwako_mod.biwako_ingot": "琵ンゴット",
     "block.biwako_mod.biwako_block": "琵ロック",
     "block.biwako_mod.biwako_ore": "琵琶鉱石",
+    "block.biwako_mod.biwako_quartz_ore": "琵琶湖ォーツ",
     "itemGroup.BiwakoItemGroup" : "琵琶湖 MOD",
     "item.biwako_mod.biwako_axe": "琵琶湖の斧",
     "item.biwako_mod.biwako_hoe": "琵琶湖のクワ",
